comments, to_html(),

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -32,7 +32,8 @@
             }
             </script>
         <style>
-            .author {color:gray}
+            body { background-color: antiquewhite; }
+            .author { color:blue; font-weight: bold; }
             #data { bottom: 0; overflow-y: auto; position: absolute; margin: auto; }
         </style>
     </head>
