small fix frontend

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -8,7 +8,7 @@
     <body>
 
         <div id="setup-box" style="display:none">
-            VID <input id="vid"> ZaZnWt6Xs8g <br> 
+            VID <input id="vid"> wrYF0HX7Kzc <br> 
             LIMIT <input id="limit" value="20"> <br>
             POLL <input id="poll" value="1000"> <br>
             SIZE <input id="size" value="24"> <br>
