--- a/frontend/index.html
+++ b/frontend/index.html
@@ -24,7 +24,7 @@
             <br>
             Public Message:
             <br>
-            Author <input id="author" value="亞可"> 
+            Author <input id="author" value="正仁"> 
             <br>
             Content <input id="public-msg" value="好可愛哦~"> 
             <button onclick="sendPublicMsg()">Send</button> 
